Third day of NLW

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- 
     <header>
       <div>
         <img
@@ -22,7 +21,7 @@
           alt="Foto de Arthur Oliveira sorrindo"
         />
       </div>
-    </header> -->
+    </header>
     <main>
       <section>
         <div>
