--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>NLW eSports - Trilha Explorer</title>
   </head>
   <body>
     <header>
